Dependencies Express - Nodemon - Morgan - Cors

--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "nodemon": "^3.1.4",
     "vite": "^5.4.1"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.21.0",
+    "morgan": "^1.10.0"
   }
 }
