Importando getAll y getOne

--- a/.env
+++ b/.env
@@ -1,17 +1,9 @@
-MYSQLDATABASE="${{MYSQL_DATABASE}}"
-MYSQL_HOST="${{RAILWAY_PRIVATE_DOMAIN}}"
-MYSQL_PASSWORD="${{MYSQL_ROOT_PASSWORD}}"
-MYSQL_PORT="3306"
-MYSQL_USER="root"
-MYSQL_DATABASE="railway"
-MYSQL_PUBLIC_URL="mysql://${{MYSQLUSER}}:${{MYSQL_ROOT_PASSWORD}}@${{RAILWAY_TCP_PROXY_DOMAIN}}:${{RAILWAY_TCP_PROXY_PORT}}/${{MYSQL_DATABASE}}"
-MYSQL_ROOT_PASSWORD="UPvllOtKuWLBSOHBtVNVbPacYqbXOCFL"
-MYSQL_URL="mysql://${{MYSQLUSER}}:${{MYSQL_ROOT_PASSWORD}}@${{RAILWAY_PRIVATE_DOMAIN}}:3306/${{MYSQL_DATABASE}}"
-PORT="4000"
-JWT_SECRET="0Xjs9M0Lc9@."
-JWT_EXPIRATION="7d"
-JWT_COOKIE_EXPIRES="1"
-MYSQLHOST="${{RAILWAY_PRIVATE_DOMAIN}}"
-MYSQLPASSWORD="${{MYSQL_ROOT_PASSWORD}}"
-MYSQLPORT="3306"
-MYSQLUSER="root"
+PORT=4000
+JWT_SECRET=0Xjs9M0Lc9@.
+JWT_EXPIRATION=7d
+JWT_COOKIE_EXPIRES=1
+
+MYSQL_HOST=localhost
+MYSQL_USER=root
+MYSQL_PASSWORD=password
+MYSQL_DATABASE=drinkers
