--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1"
   }
 }
