Migrando Base de Datos a HostingDB

--- a/.env
+++ b/.env
@@ -3,7 +3,12 @@ JWT_SECRET=0Xjs9M0Lc9@.
 JWT_EXPIRATION=7d
 JWT_COOKIE_EXPIRES=1
 
-MYSQL_HOST=localhost
-MYSQL_USER=root
-MYSQL_PASSWORD=password
-MYSQL_DATABASE=drinkers
+MYSQL_HOST=sql10.freemysqlhosting.net
+MYSQL_USER=sql10734596
+MYSQL_PASSWORD=Sr1e2bCVGs
+MYSQL_DATABASE=sql10734596
+
+LOCAL_MYSQL_HOST=localhost
+LOCAL_MYSQL_USER=root
+LOCAL_MYSQL_PASSWORD=password
+LOCAL_MYSQL_DATABASE=drinkers
