--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
-    "otplib": "^12.0.1"
+    "otplib": "^12.0.1",
+    "qrcode": "^1.5.4"
   }
 }
