--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vite": "^5.4.1"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.21.0",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.4",
     "cookie-parser": "^1.4.7",
