Agregando Sweet alert

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "otplib": "^12.0.1",
-    "qrcode": "^1.5.4"
+    "qrcode": "^1.5.4",
+    "sweetalert2": "^11.14.5"
   }
 }
